# Vaani-ML

./: .gitignore  README.md  config.py  download_models.py  ffmpeg.py  gui.py  gui2.py  inference.py  pyproject.toml  rabbit.py  requirements.txt
amqp/: file_ops.py  rabbit.py  spaces.py
data/input/: 200 years of oppression for this.srt  Every man has TWO lives.srt  Everyone Can Be Rich.srt  input.srt  test.srt  x.srt
data/subtitle/: 200 years of oppression for this_hi.srt  Every man has TWO lives_hi.srt  Everyone Can Be Rich_hi.srt  input_be.srt  input_hi.srt  input_ma.srt  test_be.srt  test_te.srt  x_as.srt  x_be.srt  x_hi.srt
langline/: main.py  pipeline.py
sample/: tts.py
scripts/: config.py  pipeline.py  pipeline_ai.py  pipeline_class.py
