[tool.poetry]
name = "langline"
version = "0.1.0"
description = "Auto-translate audio files right from your terminal"
authors = []
readme = "README.md"

[tool.poetry.scripts]
langline = "langline.main:main"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
torch = "2.0.1"
scipy = "1.11.2"
openai-whisper = "20230314"
transformers = "4.33.1"
sentencepiece = "^0.1.99"
protobuf = "^4.24.3"
numpy="1.23.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
